--- a/midterm_project/project04/comments.html
+++ b/midterm_project/project04/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 4</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,81 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 4</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<ol style="list-style-type: decimal">
+<li><p>The introduction presents both the broad interest in the topic
+and more detail on the goals of the time series analysis.</p></li>
+<li><p>The explanation of ADF is reasonable: as pointed out, its null
+hypothesis is not a great fit for these data, so rejection of the null
+might be because that specific class of nonstationary models does not
+fit well, rather than a convincing demonstration that no nonstationary
+model fits well.</p></li>
+<li><p>It’s impressive that the breakpoint model finds the vaccine
+rollout dates. However, the first breakpoint may signal an increasing
+transmission rate, whereas the vaccine should decrease transmission. So
+is this just coincidence? The model used to detect the breakpoints is
+not explained.</p></li>
+<li><p>The causal impact analysis is an interesting idea. Intervention
+models can also be written in an ARMA framework, and that might lead to
+models that are easier to write down, and their strengths and weaknesses
+would become understandable from material covered in class.</p></li>
+<li><p>The project’s similarities and differences to previous projects
+is clearly explained. That is the only section that discusses transforms
+(log or square root) which could have been tried here.</p></li>
+<li><p>A comprehensive set of references (though various of the sources
+are not referenced directly in the text).</p></li>
+<li><p>A problem studying COVID data is time-varying diagnosis rates.
+The team deals with that by studying data on acute hospitalized cases;
+very sick people may be hospitalized at a high rate throughout the
+pandemic.</p></li>
+<li><p>The team studied past peer reviews, e.g., “The feedback has
+suggested considering alternative transformations, such as log or square
+root scaling, to stabilize variance and comparing different lag models
+using AIC or likelihood ratio tests.” Unfortunately this did not quite
+prompt them into using a suitable transformation for their
+data.</p></li>
+</ol>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>It would be appropriate to study these data on a log scale. This
+would make a substantial difference and make all the other presented
+analysis simpler and more informative.</p></li>
+<li><p>Plots of marginal distributions are not necessarily informative
+for time series, but this one could help to indicate the suitability of
+a log transform.</p></li>
+<li><p>The decomposition into trend/seasonal/random is not successful
+for this time series. Lots of pattern shows up as “random”</p></li>
+<li><p>A thorough analysis of SARMA variants. The final selected
+pandemic model is rather large, and likely has numerical issues related
+to roots on the unit circle and/or close to cancelation.</p></li>
+<li><p>Could the outliers post-pandemic be related to reporting or
+testing issues?</p></li>
+<li><p>The pandemic residuals show periods of higher and lower
+variation. This would probably be fixed by a log transform.</p></li>
+<li><p>Extremely long tails are noted in the QQ-plot, but dismissed with
+“the severity of the non-normality is not substantial enough to
+significantly impact the overall model performance”. This is not
+supported by numerical evidence. Indeed, thinking more about this
+diagnostic plot could have guided the team toward realizing the utility
+of a log transform.</p></li>
+<li><p>More inline citations could help the reader connect the sources
+to the text.</p></li>
+<li><p>Avoid absolute path names for file references. Relative names are
+more reproducible.</p></li>
+<li><p>Tables 1.2 through 1.7 are not well labeled, making it hard for
+the reader to understand what time interval each corresponds
+to.</p></li>
+</ol>
+</div>
 
 
 
