--- a/midterm_project/project07/comments.html
+++ b/midterm_project/project07/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 7</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,86 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 7</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<ol style="list-style-type: decimal">
+<li><p>Referees found that the document is reproducible.</p></li>
+<li><p>The project covers various topics discussed in class. Further,
+the team tried some methods not covered in class, though perhaps
+additional attention to class material would have been helpful before
+moving on to try other things.</p></li>
+</ol>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>The contextualization with past midterm projects is vague. It
+does not acknowledge previous analysis of gold (e.g., <a href="https://ionides.github.io/531w22/midterm_project/project03/blinded.html" class="uri">https://ionides.github.io/531w22/midterm_project/project03/blinded.html</a>
+and <a href="https://ionides.github.io/531w22/midterm_project/project09/blinded.html" class="uri">https://ionides.github.io/531w22/midterm_project/project09/blinded.html</a>)</p></li>
+<li><p>The linked Kaggle dataset is 2014-01-01 to 2024-10-31, so the
+introductory statement, “This project uses historical daily gold price
+data from 2015 to 2021” is unclear. Later data shown are after 2021.
+This confusion, and the reference to an outdated link (Chodavadiya, N.
+(2021). Daily Gold Price (2015-2021) Time Series Dataset. Retrieved from
+<a href="https://www.kaggle.com/datasets/nisargchodavadiya/daily-gold-price-20152021-time-series" class="uri">https://www.kaggle.com/datasets/nisargchodavadiya/daily-gold-price-20152021-time-series</a>)
+which updates to the recent data seems strange. Unfortunately, such
+errors make it look like this old reference was retrieved from some
+undisclosed source.</p></li>
+<li><p>The report should not be cluttered with irrelevant output, such
+as pages of minor notes about package installations. Beyond that, too
+much code and output is shown with relatively litle explanation and
+discussion.</p></li>
+<li><p>Marginal plots for time series with trends are fairly
+uninformative. Better to show a time plot (which is only shown later,
+with the STL). The discussion of the marginal plots is unclear, and it
+seems the points would be easier to see on a time plot.</p></li>
+<li><p>The STL decomposition is not particuarly insightful in this case
+- except perhaps that there is a hint of some seasonality, but 2yr of
+data is not enough to confirm this. The STL does not prove that there
+are regular seasonal patterns: by mathematical construction, it
+necessarily estimates them, but the estimate is small and perhaps not
+statistically significant.</p></li>
+<li><p>The timeplot does not agree with the comment, “In early 2020 and
+March 2024, gold prices fluctuated significantly.”</p></li>
+<li><p>The ARMA root plot has an accidental <code>Mod</code> in its
+definition, so all plotted inverse roots show up as being real.</p></li>
+<li><p>For the residual plot, “a few outliers (early 2020 and mid-2024)”
+is unclear, since dates are not plotted, but the data analyzed seem to
+start in 2022. Having identified outliers, it would be interesting to
+dig into the economic history and conjecture what might have caused
+them. Google on “why did gold price peak in march 2022” suggests it was
+the war in Ukraine.</p></li>
+<li><p>References are not cited in the text, just listed at the end.
+This makes it hard to see what is being credited.</p></li>
+<li><p>What is Jarque-Bera Test? This kept showing up in the GARCH
+modelling outputs. Either omit it (it does not appear to contribute much
+here) or explain it and why it is worthwhile.</p></li>
+<li><p>The project has no spectral analysis. That might be worth doing
+to confirm the presence (or otherwise) of significant
+seasonality.</p></li>
+<li><p>While the authors claim in their conclusion that their forecasts
+align well with the recent movements, we are not actually shown any
+evidence of this. The test set is mentioned in the preprocessing section
+and never acknowledged again. We are shown plots of the forecasted
+values but we have no way to compare these to the test set.</p></li>
+<li><p>The writing also includes odd bolding of words in specific
+sections, which makes readers suspect that generative AI may have been
+used for writing. chatGPT is cited, but we are given no information as
+to how it was used: a reference should be cited in the text where
+relevant, or, if use is too extensive for that, the topic should be
+discussed.</p></li>
+<li><p>The definitions of key covariates such as Open and Volume are
+missing. The report should be written to be accessible to statistics
+masters students who are not necessarily familiar with details of
+financial markets.</p></li>
+</ol>
+</div>
 
 
 
