--- a/midterm_project/project10/comments.html
+++ b/midterm_project/project10/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 10</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,93 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 10</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<ol style="list-style-type: decimal">
+<li><p>Clear statement about relationship to past projects. This project
+says it does not use any previous code or results, but it would have
+been appropriate to use some (properly cited) if they benefitted the
 project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<li><p>The use of financial models for inflation is somewhat unusual
+(and therefore interesting). The references support this as a reasonable
+idea. Unfortunately, multiple models and corresponding software are
+introduced rather briefly, and in at least some situations it seems that
+the numbers produced by these programs are not fully understood (for
+example, different programs may have different quantities called
+AIC)</p></li>
+<li><p>Rolling window validation investigated in Sec 5.1 is a good idea,
+though Sec 5.2 returns to a simple single-split investigation, somewhat
+diluting the contribution.</p></li>
+<li><p>The description of libraries used is an interesting addition, not
+previously seen in 531 projects.</p></li>
+<li><p>The code is reproducible. As a small detail, the random number
+seed could be set using <code>set.seed()</code> to make it fully
+reproducible.</p></li>
+</ol>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>The reasoning of “because the base year of CPI data from FRED is
+1982-1984” is hard to follow because the choice of base year just
+provides a relative scaling, so it should not have substantial
+importance. The point about changes in the basket is well made, but also
+impossible to avoid even since 1985. Cell phones and internet provider
+contracts were not a common expense before 2000, for example.</p></li>
+<li><p>The Box-Ljung test here is not very informative beyond what has
+already been shown clearly from the ACF plot. Box-Ljung can be helpful
+when there are many lags close to significance and we are wondering if
+their cumulative evidence is compelling.</p></li>
+<li><p>The periodogram assessment looks wrong: “This analysis provides
+strong support for seasonal models.” There are dips at the seasonal
+frequencies (integer cycles per year). This suggests that the data are
+already deseasonalized. Ideal deseasonalization might lead to smooth
+variation, rather than dips.</p></li>
+<li><p>The exact source of the data is not given, so we can’t check if
+it is deseasonalized without digging into the code and examining
+<code>getSymbols(&quot;CPIAUCSL&quot;, src = &quot;FRED&quot;)</code>.</p></li>
+<li><p>Much space is spent on explaining Shapiro-Wilk and Jarque-Bera
+tests which are not very useful here. There is massive deviation from
+normality, and the QQ-plot is more informative for looking at the nature
+of this deviation. Shapiro-Wilk and Jarque-Bera could be helpful if we
+are unsure about the significance of the QQ-plot deviation.</p></li>
+<li><p>The rationale for ARMA(2,0) is unclear since ARMA(4,2) has lower
+AIC. The choice of ARMA(2,0) is reasonable, since probably ARMA(4,2) has
+roots very close to the unit circle and close to canceling.</p></li>
+<li><p>It appears that AIC values are compared across different levels
+of differencing, which is problematic.</p></li>
+<li><p>“SARIMA-GARCH achieves an AIC of -0.4401 and a BIC of -0.3726.”
+Apparently, this is computed on a different scale from the usual -2
+loglik + 2p. Please explain.</p></li>
+<li><p>When AIC and log-likelihood values are compared, it becomes
+critical that they are computed with an equivalent meaning (e.g., if
+they all follow the standard definition in the 531 notes). This is
+unclear here.</p></li>
+<li><p>Many models are introduced throughout the project and are not all
+explained.</p></li>
+<li><p>Section 5.3 discusses CPI as though it were a stock index. This
+is an interesting perspective, but the extent to which this is valid
+should be discussed.</p></li>
+<li><p>The excessive use of bold-face is distracting. It is not good
+professional style, and its association with ChatGPT (which may not be
+warranted in this case) is unfortunate.</p></li>
+<li><p>A minor point: There are some typos that could benefit from
+proof-reading.</p></li>
+<li><p>The Ljung-Box method is introduced, but the plot shown is used to
+support the obvious fact that the original data are not close to white
+noise,</p></li>
+<li><p>There is inconsistency about whether to include a linear trend;
+sometimes it is described as insignificant, sometimes it is found to be
+significant. The team should work out which is the best evidence, and
+explain their conclusion.</p></li>
+</ol>
+</div>
 
 
 
