--- a/midterm_project/project11/comments.html
+++ b/midterm_project/project11/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 11</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,109 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 11</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<p>The team has access to some interesting data. However, more details
+about this should be provided; readers will understand that some data
+cannot be made public, but it is confusing when this is not
+explained.</p>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>While we understand that the dataset and code cannot be shared
+due to organizational policy, we recommend that the authors provide a
+reference or credit indicating the source of the data. Additionally, it
+would be helpful to include basic details about the dataset, such as the
+number of observations analyzed, the time period covered (from what is
+inferred from the time plot, likely Feb 01 – Feb 06), and the geographic
+context of the noise level measurements. If specific location names
+cannot be disclosed due to restrictions, providing general
+characteristics—–such as whether the data was collected in an urban,
+suburban, or rural environment—–would offer valuable context. This
+additional information would enhance the audience’s understanding of how
+environmental noise levels vary across different geographic settings and
+contribute to a more meaningful interpretation of the temporal
+trends.</p></li>
+<li><p>The time plot is explained to show changing variance and no
+trend. Actually, the daily periodicity is the main feature.</p></li>
+<li><p>If variability seemed to be changing, the ADF test carried out
+would not be an appropriate way to check that. Differencing would not
+remove heteroskedasticity.</p></li>
+<li><p>A stationary test for strongly periodic data needs care - is ADF
+appropriate here? ADF tests a specific null hypothesis concerning a unit
+root and should not be used as a “black box” test for
+stationarity.</p></li>
+<li><p>The ADF test is not only inappropriate here, but also
+misinterpreted. It’s formal interpretation of the p-value of 0.137 is to
+reject the null, often misinterpreted to mean an inference of
+stationarity, but the team interprets this as evidence for
+non-stationarity and proceeds to take the difference.</p></li>
+<li><p>“Long-term change” is used to describe change within days, say
+due to weekends.</p></li>
+<li><p>“Daily or other cyclic influences” : check whether periodicity
+aligns with days.</p></li>
+<li><p>ADF test for seasonal differences is a classic case of how not to
+use ADF. There is a clear trend (in fact, clearer in this case than in
+the original data) but ADF picks stationarity rather than the null
+proposal of a simple unit root model which does describe this situation
+well.</p></li>
+<li><p>“ACF of differenced Leq” is poorly labeled - you have to see from
+the code that this is seasonally differenced not the usual first order
+difference considered earlier in this project.</p></li>
+<li><p>“auto.arima selects the best-fitting ARIMA model”. This delegates
+to <code>auto.arima</code> the task of deciding what is best. It is
+better to investigate that yourself. The <code>auto.arima</code> code
+here used KPSS not ADF for its unit root test, but that is not
+mentioned.</p></li>
+<li><p>The project discusses different information critera that
+<code>auto.arima</code> might use, but it would be better to discuss
+more concretely what was actually done.</p></li>
+<li><p>“The best-selected model is SARIMA(2,0,1)”. This is not a SARIMA
+model, just an ARIMA. Perhaps auto.arima was not told the periodicity
+(144 datapoints) so it looked for something else (12, perhaps) and
+decided there was none.</p></li>
+<li><p>There is remaining daily periodicity evident from the residual
+timeplot. The Box-Ljung statistic is perhaps trying to suggest that more
+attention is needed, by rejecting the null hypothesis of uncorrelated
+errors, but this is ignored by the team. Indeed, the Ljung-Box test is
+presented but not explained or discussed. A frequency domain analysis of
+residuals would be a better way to see this.</p></li>
+<li><p>The residuals are long-tailed. They are centered on zero by
+mathematical construction so the team is wrong to argue that this is
+evidence of model fit.</p></li>
+<li><p>The conclusion claim to have found that differencing is
+necessary, but the proposed model (claimed to be “best”) does not have
+differencing.</p></li>
+<li><p>The conclusion claims to show the need for seasonal modeling, but
+the proposed model (claimed to be “best”) does not have a seasonal
+component.</p></li>
+<li><p>The rationale for Shapiro-Wilk is a good example of why this test
+is often a waste of time. The non-normality is obvious from the QQ-plot,
+and the main question is what to do about it. Being told that the
+p-value is <span class="math inline">\(10^{-16}\)</span> does not help
+because the null hypothesis (normality) is already implausible at this
+point.</p></li>
+<li><p>The project is missing the requested comparison to other past 531
+projects.</p></li>
+<li><p>The conclusions do not make any clear contribution to the
+original questions. Finding that environmental noise has a daily
+periodicity is not surprising. The ADF test does not show that
+differencing is necessary before fitting a stationary model, at best it
+shows differencing is sufficient (it still may not be the best
+approach). How will the resulting model “aid in mitigating noise
+pollution and optimizing urban noise management strategies” as promised
+in the introduction? That is a big question, but some concrete
+conjectures would help the reader put the project’s contribution into
+context.</p></li>
+</ol>
+</div>
 
 
 
