--- a/midterm_project/project16/comments.html
+++ b/midterm_project/project16/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 16</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,79 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 16</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="overall-assessment" class="section level3">
+<h3>Overall assessment</h3>
+<ol style="list-style-type: decimal">
+<li><p>This project does not meet the expectations for a 531 midterm
+project (<a href="https://ionides.github.io/531w25/midterm_project/midterm_project_info.html" class="uri">https://ionides.github.io/531w25/midterm_project/midterm_project_info.html</a>)
+in various ways.</p></li>
+<li><p>While it might be possible to write a project that analyzes
+synthetic data, a simulation that we are told nothing about, and for
+which the team also seems unaware of its construction, is a poor
+starting point.</p></li>
+</ol>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>The introduction contains undefined promises (“a controlled yet
+insightful manner”). There are no references cited, and the source of
+the synthetic data is not explained. Some of the reasoning barely makes
+sense (“Nevertheless, the controlled setting of synthetic data enables a
+focused exploration of trade dynamics, free from external variables that
+might obscure underlying patters”). How can one learn about trade
+dynamics from simulations - presumably one can only learn about a
+particular simulator.</p></li>
+<li><p>“The average trade duration is 167.44 minutes, offering insight
+into the trading strategies’ effectiveness in this simulated market.”
+How can average trade duration (whatever that is) offer insight into a
+trading strategies’ effectiveness? This is not explained.</p></li>
+<li><p>VAR is not explained, and its role in the progression of the
+analysis is unclear.</p></li>
+<li><p>The clustering looks nonsensical. It just divides into 5 bands.
+Perhaps the simulated “price” and “quantity” are just independent draws
+from a uniform distribution? How does an analysis of such a distribution
+inform financial data analysis?</p></li>
+<li><p>Presumably, the simulated trades are for many different stocks.
+One stock could not have variations in buy/sell prices between 0 and
+1000 in a given day. So, the “daily average price” is presumably
+averaging trades in different stocks, which is hard to interpret as
+meaningful.</p></li>
+<li><p>The simulated daily prices seem to have almost no trend and no
+heteroskedasticity of the kind seen in projects with real data. The
+burden is on the team to show the value of studying this particular
+simulation, and it is left unclear.</p></li>
+<li><p>The lack of inline citations makes it hard to see whether or how
+the references connect to the text and the methods used. his omission
+weakens the credibility of the report and raises concerns about its
+academic integrity. Explicitly referencing relevant literature, lecture
+notes, or external sources would enhance clarity, demonstrate engagement
+with existing research, and ensure that conclusions are
+well-supported,</p></li>
+<li><p>The project is not placed in the context of previous DATASCI/STAT
+531 projects, as requested in the assignment information.</p></li>
+<li><p>The conclusion, “These findings underscore the dataset’s utility
+for controlled strategy testing,” is unsupported. Methods have been
+tried, and numbers generated, but how has the simulation been used to
+check that the methods give the right answer? The usual reasoning is
+that, for a simulation, you know the true data generating model so you
+know if your method successfully reconstructs it. Here, we never learn
+about how the simulation was constructed so we have no extra information
+whether the inferences are correct than we would get for real
+data.</p></li>
+<li><p>The use of inline R code (R output in text blocks) is done
+wrong.</p></li>
+<li><p>In many other places, the presentation falls short of
+expectations. Chunks of R code and output are included, with little
+explanation or interpretation.</p></li>
+</ol>
+</div>
 
 
 
