--- a/midterm_project/project17/comments.html
+++ b/midterm_project/project17/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 17</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,65 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 17</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<ol style="list-style-type: decimal">
+<li><p>An ambitious neural net approach to forecasting stocks using a
+convolutional neural net with a bidirectional long short term structure
+combined with a multi-headed attention mechanism, trained using transfer
+learning. This could be a weakness, since the use of such a complex
+model is not fully justified, but overall it is a strength since the
+current interest in such models in various machine learning applications
+is widely known.</p></li>
+<li><p>The small but highly significant effect of the volatility index
+(VIX) on predicting Tesla is notable. If VIX lagged by one day also has
+that effect, it would be actionable for trading.</p></li>
+<li><p>Reproducibility is provided by a Jupyter notebook for the deep
+learning together with Rmd for the rest of the data analysis. The
+complicated CNN-BiLSTM-Attention model is interesting but hard to
+validate, so this reproducibility is critical.</p></li>
+<li><p>The project’s contribution is explained in the context of
+previous midterm projects.</p></li>
+<li><p>The presentation is strong, though section numbers, and
+figure/table numbers and captions would help the reader.</p></li>
+</ol>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>The pandemic was March 2020 to 2023, which contradicts the stated
+motivation of using data up to July 2022 to avoid the pandemic.</p></li>
+<li><p>The residuals have considerably longer tails than normal - this
+is better seen from a QQ plot.</p></li>
+<li><p>The ARMA(0,0) is prefered by AIC and parsimony.</p></li>
+<li><p>There are some inconsistencies within the AIC table ({(1,2),
+(1,3)}, {(3,3), (3,4)}, {(3,2), (4,2)}), which are not fully addressed
+in the report. Those inconsistencies can be discussed with respect to
+optimization and model selection.</p></li>
+<li><p>Regarding the model diagnostics, the Ljung-Box test suggests that
+ARMA(1,1) residuals are uncorrelated, while the ACF plot of residuals
+suggests a possible sinusoidal pattern, implying missed periodicity.
+That may well be the same periodicity identified earlier in the original
+data - which would imply that ARMA(1,1) is not explaining that feature.
+This is a good example where looking at the ACF is more informative than
+presenting a Ljung-Box statistic.</p></li>
+<li><p>For the CNN analysis, the Test Set Prediction plot explanation
+seems to suggest that the model was fitted up to 2020-02 and then
+forecast. However, the plot seems too close to the data to fit that
+description.</p></li>
+<li><p>The motivation of applying the CNN-BiLSTM-Attention model is
+stated as that the traditional ARMA-like models cannot outperform white
+noise for log returns. The author can further support this argument by
+directly comparing out-of-sample prediction accuracy (e.g., RMSE)
+between the ARMA and deep learning models.</p></li>
+</ol>
+</div>
 
 
 
