--- a/midterm_project/project02/comments.html
+++ b/midterm_project/project02/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 2</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,71 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 2</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<p>A reproducible and well-structured project demonstrating a range of
+methods covered in the course.</p>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>Kaggle is a step removed from primary data sources. It can be
+harder to find good information on the actual source of the
+numbers.</p></li>
+<li><p>The total number of flights for each month is recorded in the
+dataset, however, there is no mention of any distinction between
+passenger flights and cargo flights, so more research or confirmation is
+warranted before claiming that the numbers are all for passenger
+flights.</p></li>
+<li><p>The questions described in the introduction are generic and
+imprecise; it would be better to explain a more focused goal and
+achievement of the project.</p></li>
+<li><p>Studying the marginal distribution of points has limited value in
+the presence of seasonality.</p></li>
+<li><p>The PACF plot looks rather hard to use usefully in the presence
+of seasonality. What do we learn from this plot? If nothing, maybe it
+should be omitted, or limited to the study of residuals.</p></li>
+<li><p>The seasonality here is so evident that it would be better to
+focus more on SARIMA than ARIMA.</p></li>
+<li><p>Residuals “centered around zero” is not evidence of good model
+fit, it is a mathematical necessity from fitting the model to any
+data.</p></li>
+<li><p>Residuals look to be auto-correlated.</p></li>
+<li><p>Plotting the log on the same scale as the original data doesn’t
+show visually what is going on. The log-transoformed data just looks
+constant at zero.</p></li>
+<li><p>“additional peaks at frequencies around 3 and 5 suggest secondary
+periodic components.” The report should note that these are harmonics
+describing non-sinusoidal seasonality at 1 cycle per year</p></li>
+<li><p>For the AIC table, it is worth adding an extra row and column,
+even if those larger models are unlikely to be selected.</p></li>
+<li><p>The ARIMA(2,1) roots plot shows the roots themselves not the
+inverse roots, thus they are outside the unit circle as they should be
+for causality &amp; invertibility.</p></li>
+<li><p>The conclusion reads, “This type of analysis is incredibly
+important because it offers insight into how the airline industry can
+structure future improvements to optimize overall efficiency in regards
+to the volume of flights offered each month.” It would be nice to know
+more details about how this time series analysis can have such large
+impact. Without details, a big claim seems empty.</p></li>
+<li><p>Covariate time series, such as the macroeconomic datasets studied
+in class, could be used to help understand the data and perhaps also for
+forecasting.</p></li>
+<li><p>Captions for figures (as well as figure number/ section numbers)
+would help readers. There are many figures, and it is hard to keep track
+without help.</p></li>
+<li><p>Very limited reference is made to previous midterm projects, so
+the project is not well placed in the context of previous work. One
+project is credited for “formatting the unit root test graphs,
+particularly visualization techniques adapted for ADF tests”</p></li>
+</ol>
+</div>
 
 
 
