--- a/midterm_project/project03/comments.html
+++ b/midterm_project/project03/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 3</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,72 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 3</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<ol style="list-style-type: decimal">
+<li><p>A reproducible and well-structured project demonstrating a range
+of methods covered in the course.</p></li>
+<li><p>It is a good idea to try a t-distributed ARIMA analysis. However,
+the code to do this seems to be trying to fit a GARCH model with
+t-distributed returns, which is an entirely different model.</p></li>
+</ol>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>The goal, “This raises the question of whether solar power
+generation continues to follow the expected 24-hour cycle as a strictly
+predictable pattern,” seems rather obvious. The 24 hour day-night cycle
+must be relevant to solar power. Is there doube about whether this cycle
+will persist in the 21st century?</p></li>
+<li><p>“aiming to provide deeper insights into the characteristics of
+solar power generation cycles.” This is a vague goal. It’s better to aim
+at a more specific question, explaining how your goal relates to
+previous approaches including previous class projects.</p></li>
+<li><p>The questions posed on the Kaggle site for this dataset are more
+concrete. The team could have adopted them. They also had access to the
+previous Kaggle contributions that they could learn from and comment
+about.</p></li>
+<li><p>“AIC often jumps by more than 2 points between model
+specifications. Such behavior suggests that the model estimation may be
+encountering convergence issues.” Be more specific and give examples.
+It’s only a problem when it jumps up more than 2, which is not so common
+in the table but does happen, e.g., {(2,0,3) (0,1,1), (3,0,3)
+(0,1,1)}).</p></li>
+<li><p>The consideration of Box-Cox is interesting, but insufficient
+details are given. What is lambda estimated at? How was the SARMA
+likelihood corrected for this? It seems from the source code that was
+not done, so the AIC is not comparable to the previous ones. It is also
+not clear how much the standard Box-Cox approach is affected by time
+series dependence.</p></li>
+<li><p>The conclusion is too vague: “The solar power generation process
+itself is a complex process, creating significant challenges in
+forecasting and model specification. The nature of the dataset due to
+its numerous confounding factors and latent variables contribute to this
+challenge. Additionally, ARMA model may not be sufficient to capture the
+intrinsic dynamics of periodicities and complexities in the dataset.”
+What specifically is being talked about here? What are the “intrinsic
+dynamics of periodicities” that you have in mind?</p></li>
+<li><p>The discussion of STL decomposition is vague. It finds anomalous
+seasonal trends in May but does not fully explore them. More discussion
+about how these deviations inspire future research can be added
+here.</p></li>
+<li><p>The project was put briefly into the context of previous work,
+but the team could engage more critically with past projects, show what
+was used as a baseline rather than just saying that there was a past
+project working on a similar model.</p></li>
+<li><p>Covariates might have a lag effect - this could be
+explored.</p></li>
+<li><p>A stated goal is to develop a forecasting model, but the forecast
+implied by the fitted model is not demonstrated.</p></li>
+</ol>
+</div>
 
 
 
