--- a/midterm_project/project09/comments.html
+++ b/midterm_project/project09/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 9</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,67 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 9</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<ol style="list-style-type: decimal">
+<li><p>A clear set of questions, relevant to topics covered in
+class.</p></li>
+<li><p>Clear motivation for studying data only starting in
+2015.</p></li>
+<li><p>Various projects use packaged decompositions such as
+<code>stl</code> and <code>decompose</code> without explaining (and
+perhaps without knowing) what these actually do. This project digs
+deeper and explains, and justifies the choice of <code>decompose</code>
+vs <code>stl</code> in the given context.</p></li>
+<li><p>The choice of log transform is appropriate.</p></li>
+<li><p>The use of rolling cross-validation via <code>tsCV</code> is
+appropriate and well explained. The resulting conclusion - that the
+regression model worked better for longer time series, and differenced
+SARMA for shorter time series, is insightful and has a good candidate
+explanation.</p></li>
+<li><p>A range of appropriately used methods.</p></li>
+<li><p>Thorough contextualization with strengths and weaknesses of
+previous projects.</p></li>
+<li><p>Referees appreciated the careful coding, including the parallel
+computation of the AIC table.</p></li>
+</ol>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>For the periodogram, units should be cycles per year, and annual
+seasonality is the bumps at 1,2,3 cycles per year. This could be seen
+more clearly after detrending. The maximum, at a frequency of 0.2,
+corresponds to a longer cycle, or perhaps to trend, which is a larger
+effect than the relatively small seasonality.</p></li>
+<li><p>For the AIC table, “mathematically improbable” could be a
+stronger assertion, “mathematically impossible”.</p></li>
+<li><p>Inverse AR roots inside the unit circle show causality, not
+invertibility.</p></li>
+<li><p>You found a large outlier, which is not so obvious from looking
+at the raw data. It could be interesting to investigate that further.
+What was going on at that date? One of the advantages of fitting a model
+is to identify the rare points that don’t fit the model.</p></li>
+<li><p>Plotting the sample ACF before detrending is not insightful -
+what is learned from this plot? Better to focus on informative
+figures.</p></li>
+<li><p>The study acknowledges external shocks like the COVID-19 pandemic
+and mortgage rate changes, but an explicit inclusion of these factors in
+the models such as exogenous variables in a regression with SARIMA
+errors could investigate these effects quantitatively.</p></li>
+<li><p>Numbered figure captions would help improve readability and make
+it easier for readers to reference figures.</p></li>
+<li><p>Macroeconomic covariates could be included via regression with
+SARIMA errors, potentially offering additional explanatory
+power.</p></li>
+</ol>
+</div>
 
 
 
