--- a/midterm_project/project13/comments.html
+++ b/midterm_project/project13/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 13</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,67 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 13</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<ol style="list-style-type: decimal">
+<li><p>The spectral power around 2.3 days is surprising; the team manage
+to remove it by band pass filtering, but perhaps they are removing
+something interesting that could instead be investigated.</p></li>
+<li><p>The team studied and learned from past projects as well as using
+a range of methods covered in class.</p></li>
+<li><p>The code is reproducible. As a small detail, the random number
+seed could be set using <code>set.seed()</code> to make it fully
+reproducible.</p></li>
+</ol>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>The ACF for the returns has surprisingly many nominally
+significant correlations. Is that a consequence of large outliers making
+the central limit theorem irrelevant?</p></li>
+<li><p>The seasonality in the STL plot looks strange; what is the period
+of the “seasona”? Not one year.</p></li>
+<li><p>The spectral peak at 2.3 days is surprising, but matches the ACF.
+Could it be a COVID artifact? Is it driven just by the 2020 crash, or
+does it arise also elseqhere?</p></li>
+<li><p>Why is ARMA(7,5) “much simpler” than ARMA(6,9)? Both are very big
+models. ARMA(2,2) has competitive AIC and is much simpler.</p></li>
+<li><p>The likelihood ratio test is carried out between ARMA(6,9) and
+ARMA(9,0) models, but these models are not nested and this makes the LRT
+inapplicable.</p></li>
+<li><p>It looks from the Model Diagnostics section that ARMA(2,2) was
+considered at some point, but didn’t make the final version.</p></li>
+<li><p>Prophet is assessed as “having learned quite well” but this seems
+to be based on one forecast. A sample size of one is not enough for much
+confidence.</p></li>
+<li><p>Having put much work into developing an ARMA model, it would make
+sense to obtain the ARMA forecast for comparison with Prophet.</p></li>
+<li><p>The use of ChatGPT to code a Butterworth bandpass filter is a
+legitimate technique, but the method is not fully explained. It would
+have been safer to use a Loess filter familiar to readers from the class
+notes.</p></li>
+<li><p>It’s interesting to see how Prophet performs, but ultimately it
+is just a regression model and, if the efficient market hypothesis is
+close to holding, Prophet cannot be expected to predict much better than
+a simple model of constant expected growth rate plus unpredictable
+variation.</p></li>
+<li><p>If this index is not tradeable, the marked does not force it
+toward satisfying the efficient market hypothesis. Could that explain
+the observed correlation?</p></li>
+<li><p>Much longer than Gaussian tails are noted, but what can be done
+about it? Various previous projects analyzing financial data use
+specific financial models not covered (yet) in class. Sometimes those
+projects do not explain the methods in sufficient detail, but it would
+be good to at least acknowledge these approaches.</p></li>
+</ol>
+</div>
 
 
 
