--- a/midterm_project/project14/comments.html
+++ b/midterm_project/project14/comments.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
+<meta name="author" content="DATASCI/STATS 531/631, Winter 2025" />
 
 
-<title>Midterm projects</title>
+<title>Review comments on Project 14</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,150 +349,69 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm projects</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
+<h1 class="title toc-ignore">Review comments on Project 14</h1>
+<h4 class="author">DATASCI/STATS 531/631, Winter 2025</h4>
 
 </div>
 
 
-<hr />
-<ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/midterm_project">https://github.com/ionides/531w25/midterm_project</a></p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
-</ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Flight
-Delays</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">U.S. Airline
-Traffic Analysis</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Solar Power
-Generation</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
-Cases</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Complexity of U.S.
-Baby Names</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Bitcoin and NASDAQ
-Composite Prices</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Gold
-Prices</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Water Level in Lake
-Malawi</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">House Prices in
-Seattle</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.html">Consumer Price
-Index</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">S&amp;P 500
-Volatility</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Vanguard S&amp;P
-500 ETF</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Tesla
-Stock</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Car
-Accidents</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Simulated Trade
-Activity</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">Tesla Stock
-2</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+<div id="strengths" class="section level3">
+<h3>Strengths</h3>
+<ol style="list-style-type: decimal">
+<li><p>A range of appropriate methods were investigated, explained and
+interpreted.</p></li>
+<li><p>The work was put in the context of previous midterm
+projects.</p></li>
+<li><p>The code is reproducible and generally well written.</p></li>
+</ol>
+</div>
+<div id="specific-comments" class="section level3">
+<h3>Specific comments</h3>
+<ol style="list-style-type: decimal">
+<li><p>The project states, “It appears that the price before 2020
+remains relatively low and stable”. This is because the value is not
+plotted on a log scale. Using a log scale would make the trajectory
+before 2020 much clearer.</p></li>
+<li><p>ARMA(0,0) looks reasonable based on the AIC table.</p></li>
+<li><p>The interpretation of the ARMA(1,0) QQ plot as being “close to
+normality” is wrong - these are long-tailed. Of course, whether this
+discrepancy is practically significant will depend on the
+purpose.</p></li>
+<li><p>The likelihood ratio test for ARMA(1,0) vs ARMA(0,1) is invalid
+because the models are not nested. Indeed, the difference of degrees of
+freedom is zero. The team used <code>lmtest::lrtest</code> without
+explaining what it does in this situation.</p></li>
+<li><p>The trend would be better modeled on a log scale. Indeed, the
+original time plot would also be more informative on a log scale since
+it would let us see the fluctations when Tesla stock was much less
+valuable.</p></li>
+<li><p>Sometimes, too many results were shown. It’s better to spend more
+time focusing on key numbers and figures. For example, showing the
+sample ACF of the price data is not insightful and best
+avoided.</p></li>
+<li><p>Every figure should have an appropriate title and labels.
+Additionally every figure and R output should have a corresponding
+discussion.</p></li>
+<li><p>The report would benefit having a clear explanation of how ARMA
+and GARCH interact with one another since we haven’t studied GARCH
+models. The authors provide the R output of the ARMA-GARCH model, but
+fail to discuss anything about it. There is a lot of information
+displayed in the R output and a discussion on the key points would
+greatly aid the reader in understanding.</p></li>
+</ol>
+<p>1.The conclusion, “Our Fourier analysis revealed dominant frequencies
+in Tesla’s returns, while Wavelet analysis captured non-stationary
+volatility fluctuations, particularly around earnings releases. These
+insights provide a more comprehensive understanding of stock price
+behavior, offering valuable implications for short-term traders and risk
+management strategies.” seems unfounded. No wavelet analysis was
+presented, and no dominant frequencies were found.</p>
+<ol style="list-style-type: decimal">
+<li>The project could have been strengthened by the consideration of
+covariate time series and/or model breakpoints to help understand why
+Tesla stock sometimes seemed to change behavior.</li>
+</ol>
+</div>
 
 
 
